--- a/vignettes/installation.Rmd
+++ b/vignettes/installation.Rmd
@@ -17,7 +17,7 @@ knitr::opts_chunk$set(
 `bml` fits Bayesian multiple-membership multilevel models via **JAGS**, so installation has two parts:
 
 1.  Install JAGS (system software)
-2.  Install the `bml` R package (from GitHub)
+2.  Install the `bml` R package (from CRAN or GitHub)
 
 ## 1. Install JAGS
 
@@ -27,9 +27,19 @@ Install the latest JAGS version for your operating system from:
 
 After installing JAGS, restart R so `rjags` can find it.
 
-## 2. Install `bml` from GitHub
+## 2. Install `bml` R package
 
-`bml` is not on CRAN yet, so install it from GitHub. Using `{remotes}` keeps the dependency footprint small.
+### Option A: Install from CRAN (Recommended)
+
+The stable release version is available on CRAN:
+
+```{r, eval = FALSE}
+install.packages("bml")
+```
+
+### Option B: Install development version from GitHub
+
+For the latest development features, install from GitHub using `{remotes}`:
 
 ```{r, eval = FALSE}
 install.packages("remotes")
@@ -37,6 +47,10 @@ remotes::install_github("benrosche/bml")
 ```
 
 If you want to build vignettes locally during installation:
+
+```{r, eval = FALSE}
+remotes::install_github("benrosche/bml", build_vignettes = TRUE)
+```
 
 ## 3. Verify the installation
 
