--- a/README.Rmd
+++ b/README.Rmd
@@ -13,15 +13,15 @@ knitr::opts_chunk$set(
 )
 ```
 
-<img src="man/figures/bml-hexagon.png" align="right" alt="bml package hexagon logo" />
+<br>
 
-### Bayesian multiple-membership multilevel models with parameterizable weight function.
+<img src="man/figures/bml-hexagon.png" align="right" width="240" alt="bml package hexagon logo" />
+
+## bml: Bayesian Multiple-Membership Multilevel Models with Endogenous Weights
 
 <!-- badges: start -->
 [![R-CMD-check](https://github.com/benrosche/bml/workflows/R-CMD-check/badge.svg)](https://github.com/benrosche/bml/actions)
 <!-- badges: end -->
-
-## bml: Bayesian Multiple-Membership Multilevel Models with Endogenous Weights
 
 `bml` is an R package for fitting *Bayesian multiple-membership multilevel models with endogenous weights* ("extended MMMM") via JAGS. It supports a range of outcome types—including linear, logit, and survival models (Cox and Weibull)—and is designed for settings where researchers want to model how multiple units at a lower level jointly influence outcomes at a higher level.
 
